Fixed layout problems that coused an overflow, and added fixed sidebar

--- a/assets/style/vordem.css
+++ b/assets/style/vordem.css
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-  overflow: hidden;
+  overflow: auto;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -64,6 +64,13 @@ a:focus, a:hover {
   color: #888;
 }
 
+.left-bar {
+  position: absolute;
+  float: left;
+  transform: rotate(90deg);
+  transform-origin: left top 0;
+}
+
 .logo {
   width: 100%;
   max-width: 120px;
@@ -82,7 +89,34 @@ a:focus, a:hover {
   text-decoration: underline;
 }
 
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  padding: 20px;
+  overflow: hidden;
+  padding-left: 1em;
+  padding-right: 1em;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidebar span {
+  -webkit-writing-mode: vertical-rl;
+  -ms-writing-mode: vertical-rl;
+  writing-mode: vertical-rl;
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+  font-size: larger;
+}
+
 .slogan {
+  position: fixed;
   height: 100%;
   display: flex;
   flex-direction: column;
